<resources>
    <string name="app_name">Animal Types</string>
    <string name="intro">Hello and Welcome to Name an Animal!</string>
    <string name="start">Start Here</string>
    <string name="name">Name: </string>
    <string name="legs">Number of Legs: </string>
    <string name="fur">Has Fur? </string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="date">Click for Today\'s Date and Time: </string>
</resources>
