<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="top"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legs"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16sp"
        android:textSize="21sp"
        android:textColor="@color/colorPrimaryDark"
        />
    <EditText
        android:id="@+id/legs_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp"
        />
    <CheckBox
        android:id="@+id/fur_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textSize="21sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/fur"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="100dp"
            android:text="@string/set"
            android:onClick="set"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/add"
            android:onClick="add"/>
    </LinearLayout>

</LinearLayout>